<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_text">Here you can create your own shoe store with your shoes. Here you can create your own shoe store with your shoes.</string>
    <string name="welcome_header">Welcome \nto our store!</string>
    <string name="instructions_header">Instructions</string>
    <string name="page_1_of_2">Page 1 of 2</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="page_2_of_2">Page 2 of 2</string>
    <string name="get_started">Get started</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="size">Size</string>
    <string-array name="sizes">
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>

    </string-array>
</resources>