<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_shop"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tv_welcome_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/shop"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/welcome_header"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcome_text"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.627" />




        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_page1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:text="@string/page_2_of_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/get_started"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingEnd="0dp"
            android:textAllCaps="false"
            android:textColor="@color/yellow"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>